--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
         <button class="filter-btn" data-category="absurd">🧠 Absurd</button>
       </div>
 
+      <!-- Ad Placement 1: Top banner (728x90 leaderboard or responsive) -->
+      <div class="ad-container" id="ad-top">
+        <!-- Google AdSense code will go here -->
+        <div class="ad-placeholder">Ad Space (728x90 or Responsive)</div>
+      </div>
+
       <!-- Items grid -->
       <div class="items-grid" id="itemsGrid">
         <!-- Items will be dynamically inserted here -->
