--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
   <!-- Toast notifications -->
   <div class="toast-container" id="toastContainer"></div>
 
+  <!-- Footer -->
+  <footer style="text-align: center; padding: 40px 20px; color: var(--text-muted); font-size: 0.9rem;">
+    <a href="privacy.html" style="color: var(--text-muted); text-decoration: none; margin: 0 15px;">Privacy Policy</a>
+    <span style="margin: 0 5px;">•</span>
+    <span>© 2024 Fix the World</span>
+  </footer>
+
   <script src="data.js"></script>
   <script src="app.js"></script>
 </body>
