--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
   <!-- Floating action button for impact summary -->
   <button class="fab" id="showImpactBtn" title="View Impact Summary">
-    <span class="fab-icon"><i class="fas fa-chart-bar"></i></span>
+    <i class="fas fa-calculator"></i>
     <span class="fab-badge" id="fabBadge">0</span>
   </button>
 
